# ML-OPS

./: pyproject.toml
.github/workflows/: classroom.yaml  dispatch.yaml
scripts/session_1/: training.py
scripts/session_6/: hello.txt
