[project]
name = "mlops-course-students"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter==1.1.1",
    "matplotlib==3.10.0",
    "mlflow==3.5.1",
    "numpy==2.3.3",
    "pandas==2.3.3",
    "pre-commit==4.3.0",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
]
